# scheduler-toy

./: .env.sample  .gitignore  Cargo.toml  README.MD  schedule.json
src/: data.rs  main.rs  schedule.rs
src/storage/: fs.rs  mod.rs  redis.rs
