[package]
name = "scheduler-toy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
futures = "0.3.30"
poise = "0.6.1"
serde = "1.0.200"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
